default/miniflux/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  labels:
    app: miniflux
    app.kubernetes.io/name: miniflux
spec:
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  selector:
      matchLabels:
        app.kubernetes.io/name: miniflux
  template:
    metadata:
      labels:
        app: miniflux
        app.kubernetes.io/name: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
