default/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: miniflux
  name: miniflux
spec:
  ingressClassName: nginx
  rules:
  - host: miniflux.joshcorp.co
    http:
      paths:
      - backend:
          service:
            name: miniflux
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - miniflux.joshcorp.co
    secretName: miniflux-joshcorp-tls
